@@ -5,7 +5,7 @@ import com.nhl.link.rest.ResourceEntity;
 import com.nhl.link.rest.it.fixture.cayenne.E4;
 import com.nhl.link.rest.runtime.jackson.IJacksonService;
 import com.nhl.link.rest.runtime.jackson.JacksonService;
-import com.nhl.link.rest.runtime.parser.cache.PathCache;
+import com.nhl.link.rest.runtime.path.PathDescriptorManager;
 import com.nhl.link.rest.protocol.CayenneExp;
 import com.nhl.link.rest.unit.TestWithCayenneMapping;
 import org.apache.cayenne.exp.Expression;
@@ -30,10 +30,10 @@ public class CayenneExpConstructorTest extends TestWithCayenneMapping {
 	public void setUp() {
 
 		IJacksonService jsonParser = new JacksonService();
-		PathCache pathCache = new PathCache();
+		PathDescriptorManager pathDescriptorManager = new PathDescriptorManager();
 
 		this.parser = new CayenneExpParser(jsonParser);
-		this.constructor = new CayenneExpConstructor(new ExpressionPostProcessor(pathCache));
+		this.constructor = new CayenneExpConstructor(new ExpressionPostProcessor(pathDescriptorManager));
 		this.e4Entity = getResourceEntity(E4.class);
 	}
 
