@@ -5,6 +5,7 @@ Release 2.13
 #301 Move "query" protocol parameter to "link-rest-sencha"
 #309 Capture request state in a new LrRequest object
 #313 Refactor Sencha extension to follow the new pipeline logic 
+#314 Refactoring runtime.parser.cache.IPathCache to runtime.path.IPathDescriptorManager
 
 Release 2.12
 
